This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0

Any uppercase BUG_* names are modernish shell bug IDs.

2022-07-25:

- Release candidate: ksh 93u+m/1.0.0-rc.1.

2722-07-24:

- Add new 'man' function in src/cmd/ksh93/fun/man. This integrates the --man
  self-documentation of ksh built-in and external AST commands with your
  system's 'man' command so you can conveniently use 'man' for all commands,
  whether built-in or external. To use this, put the file in a directory in
  your $FPATH and then issue 'autoload man' in your .kshrc to override the
  system's man(1) command. See the file for details.

- Add new 'autocd' function in src/cmd/ksh93/fun/autocd. This activates a
  feature like 'shopt -s autocd' in bash: type only a directory name to change.
  See the file for details. Add this file to a directory in your $FPATH to use.

- New feature to make 'set -b'/'set -o notify' more usable. When that option
  is on (and either the vi or emacs/gmacs line editor is in use), 'Done' and
  similar notifications from completed background jobs no longer mess up the
  command line you're typing. Instead, the notification is inserted directly
  above the line you're typing, without affecting your command line display.

- Fixed a bug that caused the -b/--notify option to only notify on one job if
  more than one background job completed at the same time.

- Fixed a bug in the 'command -x' feature introduced on 2021-01-30; it is meant
  to always run an external command, but failed to bypass path-bound builtins.

2022-07-21:

- Fixed a bug where a reproducible $RANDOM sequence (after assigning a
  specific value to $RANDOM) was influenced by running any external command.

- When an error occurs in a POSIX name() function or a dot script, the
  function or script name is now reported in the error message.

2022-07-14:
