@@ -498,15 +498,48 @@ int test_unop(register int op,register const char *arg)
  */
 int test_binop(register int op,const char *left,const char *right)
 {
-	register double lnum = 0, rnum = 0;
 	if(op&TEST_ARITH)
 	{
-		while(*left=='0')
-			left++;
-		while(*right=='0')
-			right++;
-		lnum = sh_arith(left);
-		rnum = sh_arith(right);
+		Sfdouble_t lnum, rnum;
+		if(sh.bltinfun==b_test && sh_isoption(SH_POSIX))
+		{
+			/* for test/[ in POSIX, only accept simple decimal numbers */
+			char *l = (char*)left, *r = (char*)right;
+			while(*l=='0')
+				l++;
+			while(*r=='0')
+				r++;
+			lnum = strtold(l,&l);
+			rnum = strtold(r,&r);
+			if(*l || *r)
+			{
+				errormsg(SH_DICT, ERROR_exit(2), e_number, *l ? left : right);
+				UNREACHABLE();
+			}
+		}
+		else
+		{
+			/* numeric operands are arithmetic expressions */
+			lnum = sh_arith(left);
+			rnum = sh_arith(right);
+		}
+		switch(op)
+		{
+			case TEST_EQ:
+				return(lnum==rnum);
+			case TEST_NE:
+				return(lnum!=rnum);
+			case TEST_GT:
+				return(lnum>rnum);
+			case TEST_LT:
+				return(lnum<rnum);
+			case TEST_GE:
+				return(lnum>=rnum);
+			case TEST_LE:
+				return(lnum<=rnum);
+		}
+		/* all arithmetic binary operators should be covered above */
+		UNREACHABLE();
 	}
 	switch(op)
 	{
@@ -534,20 +567,8 @@ int test_binop(register int op,const char *left,const char *right)
 			return(test_time(left,right)>0);
 		case TEST_OT:
 			return(test_time(left,right)<0);
-		case TEST_EQ:
-			return(lnum==rnum);
-		case TEST_NE:
-			return(lnum!=rnum);
-		case TEST_GT:
-			return(lnum>rnum);
-		case TEST_LT:
-			return(lnum<rnum);
-		case TEST_GE:
-			return(lnum>=rnum);
-		case TEST_LE:
-			return(lnum<=rnum);
 	}
-	/* all possible binary operators should be covered above */
+	/* all non-arithmetic binary operators should be covered above */
 	UNREACHABLE();
 }
 
