@@ -196,9 +196,16 @@ let "017 == 15" || err_exit "leading octal zero not recognised in 'let' in --pos
 (set --noposix; let "017 == 17") || err_exit "leading octal zero erroneously recognised in --noposix"
 (set --noposix --letoctal; let "017 == 15") || err_exit "leading octal zero not recognised in --noposix --letoctal (1)"
 (set --noposix; set --letoctal; let "017 == 15") || err_exit "leading octal zero not recognised in --noposix --letoctal (2)"
+test 010 -eq 10 || err_exit "'test' not ignoring leading octal zero in --posix"
+[ 010 -eq 10 ] || err_exit "'[' not ignoring leading octal zero in --posix"
+[[ 010 -eq 8 ]] || err_exit "'[[' ignoring leading octal zero in --posix"
+(set --noposix; [[ 010 -eq 10 ]]) || err_exit "'[[' not ignoring leading octal zero in --noposix"
 
 # disables zero-padding of seconds in the output of the time and times built-ins;
-exp=$'^user\t0m0.[0-9]{2}s\nsys\t0m0.[0-9]{2}s\n0m0.[0-9]{3}s 0m0.[0-9]{3}s\n0m0.000s 0m0.000s$'
+case ${.sh.version} in
+*93u+m/1.0.*)	exp=$'^user\t0m0.[0-9]{2}s\nsys\t0m0.[0-9]{2}s\n0m0.[0-9]{3}s 0m0.[0-9]{3}s\n0m0.000s 0m0.000s$' ;;
+*)		exp=$'^user\t0m0.[0-9]{3}s\nsys\t0m0.[0-9]{3}s\n0m0.[0-9]{3}s 0m0.[0-9]{3}s\n0m0.000s 0m0.000s$' ;;
+esac
 got=$("$SHELL" --posix -c '{ time; } 2>&1; times')
 [[ $got =~ $exp ]] || err_exit "POSIX time/times output: expected match of $(printf %q "$exp"), got $(printf %q "$got")"
 
